# fmtoy-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  FM-toy.carxp  LICENSE  README.md
res/: Castlevania_Bloodlines_-_01_-_Konami_Logo.opm  Castlevania_Bloodlines_-_02_-_The_Beating_in_Darkness_(Title_Theme).opm  Castlevania_Bloodlines_-_03_-_A_Vision_of_Dark_Secrets_(Opening_Theme).opm  Castlevania_Bloodlines_-_04_-_Bonds_of_Brave_Men_(Character_Selection).opm  Castlevania_Bloodlines_-_05_-_Arduous_Journey_(Map_Theme).opm  Castlevania_Bloodlines_-_06_-_Reincarnated_Soul,_Part_1_(Introduction).opm  Castlevania_Bloodlines_-_07_-_Reincarnated_Soul,_Part_2_(Stage_1).opm  Castlevania_Bloodlines_-_08_-_The_Sinking_Old_Sanctuary_(Stage_2).opm  Castlevania_Bloodlines_-_09_-_The_Discolored_Wall_(Stage_3).opm  Castlevania_Bloodlines_-_10_-_Beginning_(Classic_Tune_1).opm  Castlevania_Bloodlines_-_11_-_Bloody_Tears_(Classic_Tune_2).opm  Castlevania_Bloodlines_-_12_-_Vampire_Killer_(Classic_Tune_3).opm  Castlevania_Bloodlines_-_13_-_After_the_Good_Fight_(Game_Over).opm  Castlevania_Bloodlines_-_14_-_Mysterious_Curse_(Password).opm  Castlevania_Bloodlines_-_15_-_Iron-Blue_Intention_(Stage_4).opm  Castlevania_Bloodlines_-_16_-_The_Prayer_of_a_Tragic_Queen_(Stage_5).opm  Castlevania_Bloodlines_-_17_-_Calling_From_Heaven_(Stage_6).opm  Castlevania_Bloodlines_-_18_-_Pressure_(Invincibility).opm  Castlevania_Bloodlines_-_19_-_Messenger_From_Devil_(Area_Boss_Theme).opm  Castlevania_Bloodlines_-_20_-_Nothing_to_Lose_(Stage_1D).opm  Castlevania_Bloodlines_-_21_-_The_Six_Servants_of_the_Devil_(Stage_Boss_Theme).opm  Castlevania_Bloodlines_-_22_-_Theme_of_Simon_(Classic_Tune_4).opm  Castlevania_Bloodlines_-_24_-_Stage_Clear.opm  (+7 more)
src/: PluginDSP.cpp  (+2 more)
